--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
-    <title>front end totourials</title>
+    <script src="main.js" defer></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Sortable/1.15.0/Sortable.min.js">
+
+    </script>
+    <title>To-Do-App</title>
   </head>
   <body>
     <div class="container">
@@ -15,6 +19,5 @@
       </div>
       <div class="tasks"></div>
     </div>
-    <script src="main.js" charset="utf-8"></script>
   </body>
 </html>
