--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
         <input type="text" class="input" name="" value="" />
         <input type="submit" class="add" name="" value="Add Task" />
       </div>
-      <div class="tasks"></div>
+      <div class="tasks"> 
+<span></span>
+  </div>
     </div>
   </body>
 </html>
