--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <input type="submit" class="add" name="" value="Add Task" />
       </div>
       <div class="tasks"> 
-<span></span>
   </div>
+<span class="delete"></span>
     </div>
   </body>
 </html>
